# multitask-sentence-transformer

./: .gitignore  Dockerfile  README.md  demo.ipynb  docker-compose.yml  pyproject.toml  pytest.ini  run.bat  run.sh
sentence_transformer/: config.py  initial_setup.py  main.py  showcase.py
sentence_transformer/data/: dataset.py
sentence_transformer/models/: multitask.py  sentence_encoder.py
sentence_transformer/training/: callbacks.py  trainer.py
serving/: Dockerfile  models.config
tests/: __init__.py  conftest.py  test_config.py  test_dataset.py  test_multitask.py  test_sentence_encoder.py  test_training.py
