[tool.poetry]
name = "multitask-transformer"
version = "0.1.0"
description = "Sentence Transformer with Multitask Learning"
authors = ["Tung Cheung <tungycheung@gmail.com>"]
license = "Apache-2.0"
packages = [{include = "sentence_transformer"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow = "2.10.0"
tensorflow-serving-api = "2.10.0"
numpy = "1.23.5"
tensorflow-io-gcs-filesystem = "0.31.0"
matplotlib = "3.5.3"
pandas = "1.5.3"
scikit-learn = "1.1.3"
tqdm = "4.64.1"
seaborn = "0.12.2"
pytest-cov = "^6.0.0"
protobuf = "3.19.6"
transformers = "^4.49.0"
jupyter = "^1.1.1"
notebook = "^7.3.2"
ipykernel = "6.29.5"
spacy = "^3.8.4"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.0"
black = "22.10.0"
isort = "5.10.1"
flake8 = "5.0.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"